--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 body {
+    font-family: 'Roboto', sans-serif;
     margin: 0;
     padding: 0;
     background-color: violet;
@@ -48,4 +49,9 @@ abbr {
     text-decoration: underline;
     color: #fff;
     font-family: sans-serif;
+}
+
+label {
+    text-decoration: underline;
+    color: red;
 }
